--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,19 @@
           <ul class="project-list list">
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/banking_app.jpg"
-                  alt="Banking app interface concept"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/banking_app.jpg"
+                    alt="Banking app interface concept"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Banking App Interface Concept</h2>
                   <p>App</p>
@@ -108,11 +116,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/cashless_payment.jpg"
-                  alt="Cashless payment"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/cashless_payment.jpg"
+                    alt="Cashless payment"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Cashless Payment</h2>
                   <p>Marketing</p>
@@ -122,11 +138,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/meditation_app.jpg"
-                  alt="Meditation app"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/meditation_app.jpg"
+                    alt="Meditation app"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Meditaion App</h2>
                   <p>App</p>
@@ -136,11 +160,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/taxi_service.jpg"
-                  alt="Taxi service"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/taxi_service.jpg"
+                    alt="Taxi service"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Taxi Service</h2>
                   <p>Taxi Service</p>
@@ -150,11 +182,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/screen_illustrations.jpg"
-                  alt="Screen illustrations"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/screen_illustrations.jpg"
+                    alt="Screen illustrations"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Screen Illustrations</h2>
                   <p>Design</p>
@@ -164,11 +204,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/online_courses.jpg"
-                  alt="Woman learning on online courses"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/online_courses.jpg"
+                    alt="Woman learning on online courses"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Online Courses</h2>
                   <p>Marketing</p>
@@ -178,11 +226,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/instagram_stories_concept.jpg"
-                  alt="Different widows illustrating the instagram stories concept"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/instagram_stories_concept.jpg"
+                    alt="Different widows illustrating the instagram stories concept"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Instagram Stories Concept</h2>
                   <p>Design</p>
@@ -192,11 +248,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/organic_food.jpg"
-                  alt="Woman walking with a bag of vegetables"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/organic_food.jpg"
+                    alt="Woman walking with a bag of vegetables"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Organic Food</h2>
                   <p>Web Site</p>
@@ -206,11 +270,19 @@
 
             <li class="project-list-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/fresh_cofee.jpg"
-                  alt="Barista making an art on top of the cofee"
-                  width="360"
-                />
+                <div class="project-thumb">
+                  <img
+                    src="./images/portfolio/fresh_cofee.jpg"
+                    alt="Barista making an art on top of the cofee"
+                    width="360"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2>Fresh Cofee</h2>
                   <p>Web Site</p>
