--- a/index.html
+++ b/index.html
@@ -65,7 +65,19 @@
       <!-- Hero -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="button" data-modal-open>
+          Order Service
+        </button>
+
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button type="button" class="button" data-modal-close>
+              <svg class="icon" width="8" height="8">
+                <use href="./images/icons.svg#close"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </section>
 
       <!-- Our features -->
@@ -483,5 +495,7 @@
         </ul>
       </div>
     </footer>
+
+    <script src="modal.js"></script>
   </body>
 </html>
