--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <ul class="site-nav list">
           <li class="item">
-            <a href="./index.html" class="link">Studio</a>
+            <a href="./index.html" class="link current">Studio</a>
           </li>
 
           <li class="item">
